# maritime_sim_tutorial

./: readme.md
simple_auv/: CMakeLists.txt  colcon.pkg
simple_auv/hooks/: hook.dsv.in
simple_auv/models/: README.md
simple_auv/models/tethys/: model.sdf
simple_auv/models/tethys_equipped/: model.config  model.sdf
simple_auv/tests/: test_stationary.cc
simple_auv/worlds/: README.md  restoring_moments.sdf  water_world.sdf
